--- a/hxy0603.index.github.io-main/test.html
+++ b/hxy0603.index.github.io-main/test.html
@@ -164,7 +164,7 @@
     
     <div class="img">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OCeQSBTdt9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="img/m1.png" >
+        <img src="https://github.com/hxy0603/hxy0603.index.github.io/hxy0603.index.github.io-main/blob/main/img/m1.png" >
         <home>
             <div class="item">
                 <a href="index.html">
