--- a/hxy0603.index.github.io-main/test.html
+++ b/hxy0603.index.github.io-main/test.html
@@ -168,7 +168,7 @@
         <home>
             <div class="item">
                 <a href="index.html">
-                    <img src="https://github.com/hxy0603/hxy0603.index.github.io/hxy0603.index.github.io-main/blob/main/img/HOME.png?raw=true" height="100px" width="100px">
+                    <img src="https://github.com/hxy0603/hxy0603.index.github.io/blob/main/img/HOME.png?raw=true" height="100px" width="100px">
                 </a>
             </div>  
         </home>    
