--- a/hxy0603.index.github.io-main/test.html
+++ b/hxy0603.index.github.io-main/test.html
@@ -164,11 +164,11 @@
     
     <div class="img">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OCeQSBTdt9M" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <img src="https://github.com/hxy0603/hxy0603.index.github.io/hxy0603.index.github.io-main/blob/main/img/m1.png" >
+        <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/hxy0603.index.github.io-main/img/m1.png?raw=true" >
         <home>
             <div class="item">
                 <a href="index.html">
-                    <img src="https://github.com/hxy0603/hxy0603.index.github.io-main/blob/main/img/HOME.png?raw=true" height="100px" width="100px">
+                    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/hxy0603.index.github.io-main/img/HOME.png?raw=true" height="100px" width="100px">
                 </a>
             </div>  
         </home>    
