--- a/test.html
+++ b/test.html
@@ -168,7 +168,7 @@
         <home>
             <div class="item">
                 <a href="index.html">
-                    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/HOME.png?raw=true" height="100px" width="100px">
+                    <img src="img/HOME.png" height="100px" width="100px">
                 </a>
             </div>  
         </home>    
