--- a/v1.html
+++ b/v1.html
@@ -129,7 +129,7 @@
 <body  style="background-color: #b9b9b9;">
     <div class="a"><a href="v1.html"><button class="v1">關於校排</button></a></div>
     <div class="b"><a href="v2.html"><button class="v2">關於練習</button></a></div>
-    <div class="pic1"><img src="img/v2.png" height="200px" ></div>
+    <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v2.png?raw=true" height="200px" ></div>
     <div class="pic2"><img src="img/v1.png" height="100px" width="100px"></div>
     <div class="pic3"><img src="img/v1.png" height="100px" width="100px"></div>
     <div class="line">
