--- a/v1.html
+++ b/v1.html
@@ -115,7 +115,7 @@
         }
         .white
         {
-            background-image:url("img/line.jpg");
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
             text-align: center;
             margin-left: 0px;
             margin-right: 0px;
@@ -130,8 +130,8 @@
     <div class="a"><a href="v1.html"><button class="v1">關於校排</button></a></div>
     <div class="b"><a href="v2.html"><button class="v2">關於練習</button></a></div>
     <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v2.png?raw=true" height="200px" ></div>
-    <div class="pic2"><img src="img/v1.png" height="100px" width="100px"></div>
-    <div class="pic3"><img src="img/v1.png" height="100px" width="100px"></div>
+    <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px" width="100px"></div>
+    <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px" width="100px"></div>
     <div class="line">
         <p class="headline">——背景——</p>
         <h1 align="center">"我們是一群熱愛打球的孩子<br>
@@ -181,11 +181,11 @@
 </div>
     <p class="headline">——教練&正副隊長——</p>
     <div style="columns: 3;text-align: center;">
-    <img src="img/v coach.png" height="350px" width="420px">
+    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v%20coach.png?raw=true" height="350px" width="420px">
     <h2>校排教練:孔建家</h2>
-    <img src="img/v leader2.jpg" height="350px" width="420px">
+    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v%20leader2.jpg?raw=true" height="350px" width="420px">
     <h2>男排乙組隊長：應數系碩二 卓瑞發</h2>
-    <img src="img/v leader.jpg" height="350px" width="420px">
+    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v%20leader.jpg?raw=true" height="350px" width="420px">
     <h2>女排隊長：應外大三 陳品臻</h2>
     </div>
     <h1 class="white">
