--- a/v1.html
+++ b/v1.html
@@ -124,6 +124,13 @@
             font-size: 35px;
             font-family:fantasy;
         }
+         .img{
+            width: 100%;
+            height: auto;
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
         .img>home{
             position: absolute;
             right: 85px;
