--- a/v2.html
+++ b/v2.html
@@ -7,6 +7,10 @@
     <title>校排</title>
     <style>
         body{
+            background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v3.png?raw=true);
+            background-repeat:no-repeat;
+            background-position:top 250px left 650px;
+            background-size:25%;
             font-family: DFKai-sb;
         }
         button.v1{
@@ -192,9 +196,9 @@
 <body style="background-color: #b9b9b9;">
     <div class="a"><a href="v1.html"><button class="v1">關於校排</button></a></div>
     <div class="b"><a href="v2.html"><button class="v2">關於練習</button></a></div>
-    <div class="pic1"><img src="img/v2.png" height="200px" width="1510px"></div>
-    <div class="pic2"><img src="img/v1.png" height="100px" width="100px"></div>
-    <div class="pic3"><img src="img/v1.png" height="100px" width="100px"></div>
+    <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v2.png?raw=true" height="200px" width="1510px"></div>
+    <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" width="100px"></div>
+    <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" width="100px"></div>
     <table  align="center" border="1">
         <tr>
           <th>校排練球時間</th>
@@ -214,12 +218,12 @@
           </tr>
       </table>
       <div class="anime">
-        <a href="#"><img src="img/vo1.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/vo2.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/vo3.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/vo4.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/vo5.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/vo6.jpg" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo1.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo2.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo3.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo4.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo5.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo6.jpg?raw=true" width="720" height="480" alt="#"></a>
     </div>
     <h1 class="white">
         Man's:<a href="https://www.facebook.com/all.cycu.volleyball/">FB</a>&nbsp;&nbsp;&nbsp;
