--- a/v2.html
+++ b/v2.html
@@ -197,8 +197,8 @@
     <div class="a"><a href="v1.html"><button class="v1">關於校排</button></a></div>
     <div class="b"><a href="v2.html"><button class="v2">關於練習</button></a></div>
     <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v2.png?raw=true" height="200px" width="1510px"></div>
-    <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" width="100px"></div>
-    <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" width="100px"></div>
+    <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px" width="100px"></div>
+    <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px"width="100px"></div>
     <table  align="center" border="1">
         <tr>
           <th>校排練球時間</th>
