--- a/ba1.html
+++ b/ba1.html
@@ -7,7 +7,7 @@
     <title>校羽</title>
     <style>
         body{
-            background: url(img/ba4.png);
+            background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba4.png?raw=true);
             background-repeat:no-repeat;
             background-position:top 400px left 550px;
             background-size:30%;
@@ -116,7 +116,7 @@
         }
         .white
         {
-            background-image:url("img/line.jpg");
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
             text-align: center;
             margin-left: 0px;
             margin-right: 0px;
@@ -130,9 +130,9 @@
 <body  style="background-color: #b9b9b9">
     <div class="a"><a href="ba1.html"><button class="b1">關於校羽</button></a></div>
     <div class="b"><a href="ba2.html"><button class="b2">關於練習</button></a></div>
-    <div class="pic1"><img src="img/ba3.png" height="200px"></div>
-    <div class="pic2"><img src="img/ba1.png" height="100px" width="100px"></div>
-    <div class="pic3"><img src="img/ba1.png" height="100px" width="100px"></div>
+    <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba3.png?raw=true" height="200px"></div>
+    <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba1.png?raw=true" height="100px" width="100px"></div>
+    <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba1.png?raw=true" height="100px" width="100px"></div>
     <div class="line">
         <p class="headline">——背景——</p>
         <h1 align="center">"充分發揮個人潛力就是成功<br>在場上共同揮灑的汗水不要忘記<br>因為這將會是最美好的回憶"</h1>
@@ -187,11 +187,11 @@
     </table>
     <p class="headline">——教練&正副隊長——</p>
     <div style="columns: 3;text-align: center;">
-    <img src="img/ba coach.jpg" height="350px" width="400px">
+    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba%20coach.jpg?raw=true" height="350px" width="400px">
     <h2>校羽教練:蘇榮立</h2>
-    <img src="img/ba leader1.jpg" height="350px" width="400px">
+    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba%20leader1.jpg?raw=true" height="350px" width="400px">
     <h2>男羽隊長：環工大三 張棠文</h2>
-    <img src="img/ba leader2.jpg" height="350px" width="400px">
+    <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba%20leader2.jpg?raw=true" height="350px" width="400px">
     <h2>女羽隊長：資管大三 李玟俞</h2>
     </div>
     <h1 class="white">
