--- a/ba2.html
+++ b/ba2.html
@@ -7,7 +7,7 @@
     <title>校羽</title>
     <style>
          body{
-            background: url(img/ba4.png);
+            background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba4.png?raw=true);
             background-repeat:no-repeat;
             background-position:top 400px left 550px;
             background-size:30%;
@@ -104,7 +104,7 @@
         }
         .white
         {
-            background-image:url("img/line.jpg");
+            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
             height: 60px;
             width: 1535px;
             text-align: center;
@@ -196,9 +196,9 @@
 <body style="background-color: #b9b9b9;">
     <div class="a"><a href="ba1.html"><button class="b1">關於校羽</button></a></div>
     <div class="b"><a href="ba2.html"><button class="b2">關於練習</button></a></div>
-    <div class="pic1"><img src="img/ba3.png" height="200px" width="1510px"></div>
-    <div class="pic2"><img src="img/ba1.png" height="100px" width="100px"></div>
-    <div class="pic3"><img src="img/ba1.png" height="100px" width="100px"></div>
+    <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba3.png?raw=true" height="200px" width="1510px"></div>
+    <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba1.png?raw=true" height="100px" width="100px"></div>
+    <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/ba1.png?raw=true" height="100px" width="100px"></div>
     <table align="center">
         <tr>
             <th>校羽練球時間</th>
@@ -218,12 +218,12 @@
             </tr>
     </table>
     <div class="anime">
-        <a href="#"><img src="img/bad1.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/bad2.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/bad3.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/bad4.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/bad5.jpg" width="720" height="480" alt="#"></a>
-        <a href="#"><img src="img/bad6.jpg" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad1.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad2.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad3.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad4.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad5.jpg?raw=true" width="720" height="480" alt="#"></a>
+        <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad6.jpg?raw=true" width="720" height="480" alt="#"></a>
     </div>
     <h1 class="white">
         Man's＆Woman's::<a href="https://www.facebook.com/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%B8%E7%BE%BD%E7%90%83%E9%9A%8A-325130891201666/?ref=page_internal">FB</a>
