--- a/v2.html
+++ b/v2.html
@@ -191,6 +191,29 @@
   -webkit-animation-play-state: paused;
   animation-play-state: paused;
   }
+        
+  .img>home{
+            position: absolute;
+            right: -1px;
+            bottom: 20px;
+        }
+        .item
+        {
+            max-width: 100px;
+            overflow: hidden;
+            display: flex;
+            transition: .8s;
+            
+        }
+        .item>img
+        {
+            width: 100%;
+        }
+        .item:hover
+        {
+            max-width: 200px;
+            transform: scale(1.3);
+        }
     </style>
 </head>
 <body style="background-color: #b9b9b9;">
@@ -229,5 +252,13 @@
         Man's:<a href="https://www.facebook.com/all.cycu.volleyball/">FB</a>&nbsp;&nbsp;&nbsp;
         Woman's:<a href="https://www.facebook.com/Cygvt/">FB</a>
     </h1>
+    <div class="img">
+     <home>
+            <div class="item">
+                <a href="index.html">
+                    <img src="img/HOME.png" height="70px" width="70px">
+                </a>
+            </div>  
+     </home> 
 </body>
 </html>
