--- a/v2.html
+++ b/v2.html
@@ -191,7 +191,13 @@
   -webkit-animation-play-state: paused;
   animation-play-state: paused;
   }
-        
+  .img{
+            width: 100%;
+            height: auto;
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
   .img>home{
             position: absolute;
             right: -1px;
