--- a/v2.html
+++ b/v2.html
@@ -201,7 +201,7 @@
   .img>home{
             position: absolute;
             right: 2px;
-            bottom: 60px;
+            top: 60px;
         }
         .item
         {
