--- a/v2.html
+++ b/v2.html
@@ -110,6 +110,7 @@
             text-align: center;
             position: absolute;
             left: 0px;
+            right:0px;
             top: 1000px;
             z-index: auto;
             font-size: 35px;
