--- a/ba2.html
+++ b/ba2.html
@@ -105,11 +105,10 @@
         .white
         {
             background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
-            height: 60px;
-            width: 1535px;
             text-align: center;
             position: absolute;
             left: 0px;
+            right:0px;
             top: 1000px;
             z-index: auto;
             font-size: 35px;
