--- a/basketball1.html
+++ b/basketball1.html
@@ -8,7 +8,7 @@
     <style>
         .white
         {
-            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
+            background-image:url("img/line01.jpg");
             height: 120px;
             z-index: auto;
             margin-left: 0px;
@@ -32,7 +32,7 @@
             z-index: 1;
         }
         body{
-            background-image: url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/basketballbg.png?raw=true");
+            background-image: url("img/basketballbg.png");
             background-repeat: repeat-y;
             background-position:top 122px left 600px;
             background-size: 23%;
