--- a/basketball1.html
+++ b/basketball1.html
@@ -165,7 +165,7 @@
         }
         .white2
         {
-            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line01.jpg?raw=true");
+            background-image:url("img/line01.jpg");
             text-align: center;
             margin-left: 0px;
             margin-right: 0px;
@@ -235,10 +235,10 @@
     <div class="txt01"><a href="basketball2.html"><button class="b2">關於練習</button></a></div>
     <div class="txt"><a href="basketball1.html"><button class="b1">關於校籃</button></a></div>
     <div class="ia">
-    <div class="img77"><img src="basket.png" height="191px " width="300px"></div>
-    <div class="img03"><img src="basketball.png" height="60px" width="60px"></div>
-    <div class="img04"><img src="basketball.png" height="60px" width="60px"></div>   
-    <div class="img01"><img src="basket.png" height="191px " width="300px"></div>
+    <div class="img77"><img src="img/basket.png" height="191px " width="300px"></div>
+    <div class="img03"><img src="img/basketball.png" height="60px" width="60px"></div>
+    <div class="img04"><img src="img/basketball.png" height="60px" width="60px"></div>   
+    <div class="img01"><img src="img/basket.png" height="191px " width="300px"></div>
 </div>
         <div class="line">
             <p class="headline" align="center" font-size="38px">——背景——</p>
