--- a/basketball1.html
+++ b/basketball1.html
@@ -277,13 +277,13 @@
     </div>
         <p class="headline2" align="center" >——教練&隊長——</p>
         <div style="columns: 4;text-align: center;">
-        <img src="mancoach.jpg" height="300px " width="230px">
+        <img src="img/mancoach.jpg" height="300px " width="230px">
         <h2 >校男籃教練:張智峰</h2>
-        <img src="manleader.jpg" height="300px " width="230px">
+        <img src="img/manleader.jpg" height="300px " width="230px">
         <h2 >校男籃隊長：<br>企管二丁 王承郅</h2>
-        <img src="womancoach.jpg" height="300px " width="230px">
+        <img src="img/womancoach.jpg" height="300px " width="230px">
         <h2>校女籃教練:林國全</h2>
-        <img src="womanleader.jpg" height="300px " width="230px">
+        <img src="img/womanleader.jpg" height="300px " width="230px">
         <h2>校女籃隊長：<br>企管三乙 黃思潔</h2>
         </div>
         <div class="white2">
