--- a/basketball1.html
+++ b/basketball1.html
@@ -283,7 +283,7 @@
         <h2 >校男籃隊長：<br>企管二丁 王承郅</h2>
         <img src="img/womancoach.jpg" height="300px " width="230px">
         <h2>校女籃教練:林國全</h2>
-        <img src="img/womanleader.jpg" height="300px " width="230px">
+        <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/womanleader.jpg?raw=true" height="300px " width="230px">
         <h2>校女籃隊長：<br>企管三乙 黃思潔</h2>
         </div>
         <div class="white2">
