--- a/basketball1.html
+++ b/basketball1.html
@@ -207,7 +207,7 @@
             justify-content: center;
         }
   .img>home{
-            position: absolute;
+            position: relative;
             right: 2px;
             top: 0px;
         }
