--- a/basketball1.html
+++ b/basketball1.html
@@ -207,7 +207,7 @@
             justify-content: center;
         }
   .img>home{
-            position: relative;
+            position: absolute;
             right: 2px;
             top: -60px;
         }
