--- a/aboutus.html
+++ b/aboutus.html
@@ -184,13 +184,13 @@
 
    <div style="columns: 4;text-align: center;font-family: 'DFKai-sb';">
     <h2>黃曉筠</h2><br>
-    <a href="https://www.instagram.com/_xiaojun_0603/"><img class="team" src="yun.png" height="400px" width="200px"></a>
+    <a href="https://www.instagram.com/_xiaojun_0603/"><img class="team" src="img/yun.png" height="400px" width="200px"></a>
     <h2>黃禹儒</h2>
-    <a href="https://www.instagram.com/ru._.www/"><img class="team1" src="ru.png" height="280px" width="340px"></a>
+    <a href="https://www.instagram.com/ru._.www/"><img class="team1" src="img/ru.png" height="280px" width="340px"></a>
     <h2>何芳賢</h2>
-    <a href="https://www.instagram.com/hf_hyun.0802/"><img class="team2" src="fang.png" height="400px" width="300px"></a>
+    <a href="https://www.instagram.com/hf_hyun.0802/"><img class="team2" src="img/fang.png" height="400px" width="300px"></a>
     <h2>李嘉欣</h2>
-    <a href="https://www.instagram.com/hy_beom02/"><img  class="team3" src="jia.png" height="280px" width="340px"></a>
+    <a href="https://www.instagram.com/hy_beom02/"><img  class="team3" src="img/jia.png" height="280px" width="340px"></a>
     
     </div>
     <div style="columns: 4;text-align: center;">
