--- a/aboutus.html
+++ b/aboutus.html
@@ -111,7 +111,7 @@
             justify-content: center;
         }
   .img>home{
-            position: absolute;
+            position: relative;
             right: 2px;
             top: 60px;
         }
