--- a/aboutus.html
+++ b/aboutus.html
@@ -164,8 +164,15 @@
         font-size: 25px;}
         p{-webkit-column-break-after:always ;
         font-size: 22px;}
+        body{
+            background-image: url("img/usus.png" ) ;
 
-        
+            background-repeat: no-repeat;
+           background-position:top 430px left 100px;
+            background-size: 80%;
+            background-attachment: scroll;
+            z-index: top;
+        }
     </style>
 </head>
 <body style="background-color: #b9b9b9;">
