--- a/aboutus.html
+++ b/aboutus.html
@@ -165,7 +165,7 @@
         p{-webkit-column-break-after:always ;
         font-size: 22px;}
         body{
-            background-image: url("img/usus.png" ) ;
+            background-image: url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/usus.png?raw=true" ) ;
 
             background-repeat: no-repeat;
            background-position:top 430px left 100px;
