--- a/index1.html
+++ b/index1.html
@@ -175,7 +175,7 @@
     </pic2>
     <pic3>
         <div class="item">
-            <a href="movie.html">
+            <a href="https://hxy0603.github.io/hyx0603.github.io/basketball1.html">
                 <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/2.png?raw=true" height="220px" weight="220px">
             </a>
         </div>
@@ -189,14 +189,14 @@
     </pic4>
     <pic5>
         <div class="item">
-            <a href="badminton.html">
+            <a href="https://hxy0603.github.io/hyx0603.github.io/ba1.html">
                 <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/4.png?raw=true" height="220px" weight="220px">
             </a>
         </div>
     </pic5>
     <pic6>
         <div class="item">
-            <a href="us.html">
+            <a href="https://hxy0603.github.io/hyx0603.github.io/aboutus.html">
                 <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/5.png?raw=true" height="180px" weight="180px">
             </a>
         </div>
