--- a/test.html
+++ b/test.html
@@ -167,7 +167,7 @@
         <img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/m1.png?raw=true" >
         <home>
             <div class="item">
-                <a href="index.html">
+                <a href="https://hxy0603.github.io/hyx0603.github.io/index1.html">
                     <img src="img/HOME.png" height="100px" width="100px">
                 </a>
             </div>  
