--- a/aboutus.html
+++ b/aboutus.html
@@ -217,7 +217,7 @@
         <div class="img">
             <home>
                    <div class="item">
-                       <a href="index.html">
+                       <a href="https://hxy0603.github.io/hyx0603.github.io/index1.html">
                            <img src="img/HOME.png" height="70px" width="70px">
                        </a>
                    </div>  
