--- a/ba1.html
+++ b/ba1.html
@@ -125,6 +125,35 @@
             font-size: 35px;
             font-family:fantasy;
         }
+        .img{
+            width: 100%;
+            height: auto;
+            position: relative;
+            display: flex;
+            justify-content: center;
+        }
+        .img>home{
+            position: absolute;
+            right: -1px;
+            bottom: 20px;
+        }
+        .item
+        {
+            max-width: 100px;
+            overflow: hidden;
+            display: flex;
+            transition: .8s;
+            
+        }
+        .item>img
+        {
+            width: 100%;
+        }
+        .item:hover
+        {
+            max-width: 200px;
+            transform: scale(1.3);
+        }
     </style>
 </head>
 <body  style="background-color: #b9b9b9">
@@ -197,5 +226,14 @@
     <h1 class="white">
         Man's＆Woman's:<a href="https://www.facebook.com/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%B8%E7%BE%BD%E7%90%83%E9%9A%8A-325130891201666/?ref=page_internal">FB</a>
     </h1>
+    <div class="img">
+     <home>
+            <div class="item">
+                <a href="index1.html">
+                    <img src="img/HOME.png" height="70px" width="70px">
+                </a>
+            </div>  
+     </home> 
+</div>
 </body>
 </html>
