--- a/v1.html
+++ b/v1.html
@@ -6,154 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校排</title>
     <style>
-        body{
-
-            background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v3.png?raw=true);
-            background-repeat:no-repeat;
-            background-position:top 400px left 650px;
-            background-size:25%;
-            font-family: DFKai-sb;
-        }
-        button.v1{
-            font-size: 28px;
-            font-family:DFKai-sb ;
-            font-weight: bold;
-            color: black;
-            left:310px;
-            top: 45px;
-            position: absolute;
-            left:330px;
-            top: 70px;
-            z-index: 2;
-            cursor:pointer;
-            transition: color 0.2s linear;
-        }
-        button.v1{
-            color: orangered;
-        }
-        button.v2{
-            font-size: 28px;
-            font-family:DFKai-sb ;
-            font-weight: bold;
-            color: black;
-            left:830px;
-            top: 45px;
-            position: absolute;
-            left:860px;
-            top: 70px;
-            z-index: 2;
-            cursor:pointer;
-            transition: color 0.2s linear;
-        }
-        button.v2{
-            color: orangered;
-        }
-        .pic1{
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            z-index: -999; 
-        }
-        .pic1 img{
-            min-width: 100%;
-            width: 100%;
-        }
-        .pic2{
-            position:absolute;
-            left:330px;
-            top: 120px;
-            z-index: 1;
-            animation: myfirst 1.5s infinite;
-            animation-name: v1;
-            animation-duration: 3s;
-        }
-        @keyframes v1{
-            0%  { left:330px; left:360px;}
-           25%  { left:330px; left:300px;}
-           50%  { left:330px; left:360px;}
-           75%  { left:330px; left:300px;}
-           100% { left:330px; left:360px;}
-        }
-        .pic3{
-            animation: myfirst 1.5s infinite;
-            position: absolute;
-            left:860px;
-            top: 120px;
-            z-index: 1;
-            animation-name: v2;
-            animation-duration: 3s;
-        }
-        @keyframes v2{
-            0%  { left:860px; left:890px;}
-           25%  { left:860px; left:830px;}
-           50%  { left:860px; left:890px;}
-           75%  { left:860px; left:830px;}
-           100% { left:860px; left:890px;}
-        }
-        .line{
-            padding-top: 250px;
-            padding-left: 250px;
-            padding-right: 250px;
-        }
-        p.headline{
-            text-align: center;
-            font-weight: bolder;
-            font-size: 38px;
-        }
-        h2{
-            -webkit-column-break-after: always;
-            text-align: center;
-        }
-        p{
-            text-align: center;
-            font-size: 28px;
-        }
-        table{
-            font-size: 32px;
-        }
-        .white
-        {
-            background-image:url("https://github.com/hxy0603/hyx0603.github.io/blob/main/img/line.jpg?raw=true");
-            text-align: center;
-            margin-left: 0px;
-            margin-right: 0px;
-            margin-bottom: 0px;
-            z-index: auto;
-            font-size: 35px;
-            font-family:fantasy;
-        }
-         .img{
-            width: 100%;
-            height: auto;
-            position: relative;
-            display: flex;
-            justify-content: center;
-        }
-        .img>home{
-            position: absolute;
-            right: -1px;
-            bottom: 20px;
-        }
-        .item
-        {
-            max-width: 100px;
-            overflow: hidden;
-            display: flex;
-            transition: .8s;
-            
-        }
-        .item>img
-        {
-            width: 100%;
-        }
-        .item:hover
-        {
-            max-width: 200px;
-            transform: scale(1.3);
-        }
-
+        @import"v1.css";
     </style>
 </head>
 <body  style="background-color: #b9b9b9;">
