--- a/v2.html
+++ b/v2.html
@@ -6,218 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校排</title>
     <style>
-        body{
-            background: url(https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v3.png?raw=true);
-            background-repeat:no-repeat;
-            background-position:top 250px left 650px;
-            background-size:25%;
-            font-family: DFKai-sb;
-        }
-        button.v1{
-            font-size: 28px;
-            font-family:DFKai-sb ;
-            font-weight: bold;
-            color: black;
-            left:310px;
-            top: 45px;
-            position: absolute;
-            left:330px;
-            top: 70px;
-            z-index: 2;
-            cursor:pointer;
-            transition: color 0.2s linear;
-        }
-        button.v1{
-            color: orangered;
-        }
-        button.v2{
-            font-size: 28px;
-            font-family:DFKai-sb ;
-            font-weight: bold;
-            color: black;
-            left:830px;
-            top: 45px;
-            position: absolute;
-            left:860px;
-            top: 70px;
-            z-index: 2;
-            cursor:pointer;
-            transition: color 0.2s linear;
-        }
-        button.v2{
-            color: orangered;
-        }
-        .pic1{
-            position: absolute;
-            top: 0;
-            left: 0;
-            bottom: 0;
-            right: 0;
-            z-index: -999; 
-        }
-        .pic1 img{
-            min-width: 100%;
-            width: 100%;
-        }
-        .pic2{
-            position: absolute;
-            left:330px;
-            top: 120px;
-            z-index: 1;
-            animation: myfirst 1.5s infinite;
-            animation-name: v1;
-            animation-duration: 3s;
-        }
-        @keyframes v1{
-            0%  { left:330px; left:360px;}
-           25%  { left:330px; left:300px;}
-           50%  { left:330px; left:360px;}
-           75%  { left:330px; left:300px;}
-           100% { left:330px; left:360px;}
-        }
-        .pic3{
-            animation: myfirst 1.5s infinite;
-            position: absolute;
-            left:860px;
-            top: 120px;
-            z-index: 1;
-            animation-name: v2;
-            animation-duration: 3s;
-        }
-        @keyframes v2{
-            0%  { left:860px; left:890px;}
-           25%  { left:860px; left:830px;}
-           50%  { left:860px; left:890px;}
-           75%  { left:860px; left:830px;}
-           100% { left:860px; left:890px;}
-        }
-        table, td, th {
-            border: 1px solid black;
-            
-        }
-        table{
-            width: 80%;
-            border-collapse: collapse;
-            margin-top:250px;
-            font-size: 32px;
-        }
-        .anime a{
-  display: block;
-  position: absolute;
-  top:70%;
-  left:30%;
-  opacity: 0;
-  filter: alpha(opacity=0);
-  /*動畫全長時間設定*/
-  -webkit-animation: slider 24s linear infinite;
-  animation: slider 24s linear infinite;
-}
- 
-/*動畫關鍵影格, slider動畫名字*/
-  @-webkit-keyframes slider {
-    2.5% {
-      opacity: 1;
-      filter: alpha(opacity=100);
-    }
-    17.5% {
-    opacity: 1;
-    filter: alpha(opacity=100);
-    }
-    20% {
-    opacity: 0;
-    filter: alpha(opacity=0);
-    }
-  }
-  @keyframes slider {
-    2.5% {
-      opacity: 1;
-      filter: alpha(opacity=100);
-    }
-    17.5% {
-    opacity: 1;
-    filter: alpha(opacity=100);
-    }
-    20% {
-    opacity: 0;
-    filter: alpha(opacity=0);
-    }
-  }
- 
-/*每個圖片相隔4秒*/
-  .anime a:nth-child(1) {
-    -webkit-animation-delay: 0s;
-    animation-delay: 0s;
-  }
- 
-  .anime a:nth-child(2) {
-    -webkit-animation-delay: 3s;
-    animation-delay: 3s;
-  }
- 
-  .anime a:nth-child(3) {
-    -webkit-animation-delay: 6s;
-    animation-delay: 6s;
-  }
- 
-  .anime a:nth-child(4) {
-    -webkit-animation-delay: 9s;
-    animation-delay: 9s;
-  }
- 
-  .anime a:nth-child(5) {
-    -webkit-animation-delay: 12s;
-    animation-delay: 12s;
-  }
-  .anime a:nth-child(6) {
-    -webkit-animation-delay: 15s;
-    animation-delay: 15s;
-  }
-/*當滑鼠移動到圖片的區塊時，動畫暫停*/
-  .anime a:hover{
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-  }
-  .img{
-            width: 100%;
-            height: auto;
-            position: relative;
-            display: flex;
-            justify-content: center;
-        }
-  .img>home{
-            position: absolute;
-            right: 2px;
-            top: 550px;
-        }
-        .item
-        {
-            max-width: 100px;
-            overflow: hidden;
-            display: flex;
-            transition: .8s;
-            
-        }
-        .item>img
-        {
-            width: 100%;
-        }
-        .item:hover
-        {
-            max-width: 200px;
-            transform: scale(1.3);
-        }
-         .white
-        {
-            background-image:url("img/line.jpg");
-            text-align: center;
-            position: absolute;
-            left: 0px;
-            right: 0px;
-            top: 1000px;
-            z-index: auto;
-            font-size: 35px;
-            font-family:fantasy;
-        }
+        @import"v2.css";
     </style>
 </head>
 <body style="background-color: #b9b9b9;">
