--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index01</title>
     <style>
-        *
+       /* *
         {
             margin: 0;
             padding: 0;
@@ -147,7 +147,8 @@
         .item:hover{
             max-width: 200px;
             transform: scale(1.3);
-        }
+        }*/
+        @import "css/index1.css"
     </style>
 </head>
 <body style="background-color: #b9b9b9;">
