--- a/v1.html
+++ b/v1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校排</title>
     <style>
-        @import"v1.css";
+        @import "css/v1.css";
     </style>
 </head>
 <body  style="background-color: #b9b9b9;">
