--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>movie01</title>
     <style>
-        *{
+       /* *{
             margin: 0;
             padding: 0;
         }
@@ -146,7 +146,8 @@
         {
             max-width: 200px;
             transform: scale(1.3);
-        }
+        }*/
+        @import "css/test.css";
 
     </style>
 </head>
