--- a/index1.html
+++ b/index1.html
@@ -148,7 +148,7 @@
             max-width: 200px;
             transform: scale(1.3);
         }*/
-        @import "css/index1.css"
+        @import "css/index1.css";
     </style>
 </head>
 <body style="background-color: #b9b9b9;">
