--- a/ba1.html
+++ b/ba1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>校羽</title>
     <style>
-        @import "ba1.css";
+        @import "css/ba1.css";
     </style>
 </head>
 <body  style="background-color: #b9b9b9">
