--- a/aboutus1.html
+++ b/aboutus1.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about01</title>
     <style>
-        @import("aboutus1.css")
+        @import("css/aboutus1.css")
 
         /*
         *{
