--- a/basketball11.html
+++ b/basketball11.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>關於校籃</title>
     <style>
-        @import"basketball11.css"
+        @import"css/basketball11.css"
     </style>
 </head>
 <body >
