--- a/basketball11.html
+++ b/basketball11.html
@@ -27,13 +27,13 @@
                 一般生也可以透過校內舉辦的徵選會進入"<br></h1>
             
             <p align="center">
-            <span >校男籃</span><br>
+            <span class="wor">校男籃</span><br>
             為中華民國大專校院籃球運動聯賽的公開男生組第一級<br>
             2019年開始由蔡峻銘、張智峰、陳盈吉擔任教練<br>
             該年為校男籃在UBA大放異彩的一年，取得近些年來的最佳成績<br>
             讓中原男籃開始備受外界矚目，而這股氣勢延續至下一年<br>
             登上了公開男生組第一級的舞台，並且締造了甲一級第九名的佳績，是所有中原人的驕傲<br>
-            <span >校女籃</span><br>
+            <span class="wor">校女籃</span><br>
             也不惶多讓，在競爭激烈的聯賽中，女籃是中華民國大專校院籃球運動聯賽的公開女生組第二級<br>
             由林國全老師擔任教練，女籃陣容堅強，在全校的支持下，相信不久後校女籃會晉升到甲級!<br><br>
             </p>
@@ -55,7 +55,7 @@
         </table>
     </div>
         <p class="headline2" align="center" >——教練&隊長——</p>
-        <div class="cde">
+        <div class="cv">
         <img src="img/mancoach.jpg" height="300px " width="230px">
         <h2 >校男籃教練:張智峰</h2>
         <img src="img/manleader.jpg" height="300px " width="230px">
