--- a/basketball22.html
+++ b/basketball22.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>關於練習</title>
     <style>
-      
+      @import"css/basketball22.css"
     </style>
 </head>
 <body >
