--- a/ba2.html
+++ b/ba2.html
@@ -45,12 +45,14 @@
         Man's＆Woman's::<a href="https://www.facebook.com/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%B8%E7%BE%BD%E7%90%83%E9%9A%8A-325130891201666/?ref=page_internal">FB</a>
     </h1>
      <div class="img">
+     <div class="img">
      <home>
             <div class="item">
-                <a href="https://hxy0603.github.io/hyx0603.github.io/index1.html">
+                <a href="index1.html">
                     <img src="img/HOME.png" height="70px" width="70px">
                 </a>
             </div>  
      </home> 
+</div>
 </body>
 </html>
