--- a/v2.html
+++ b/v2.html
@@ -17,8 +17,16 @@
     <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px"width="100px"></div>
     <table  align="center" border="1">
         <tr>
-          <th>校排練球時間</th>
-          <th>校排練球地點</th>
+          <th>校男排練球時間</th>
+          <th>校男排練球地點</th>
+        </tr>
+        <tr>
+          <td>星期一到星期五17:50-20:00</td>
+          <td>中原大學體育館</td>
+        </tr>
+        <tr>
+          <th>校女排練球時間</th>
+          <th>校女排練球地點</th>
         </tr>
         <tr>
           <td>星期一17:50-20:00</td>
