--- a/v2.html
+++ b/v2.html
@@ -16,6 +16,7 @@
     <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px" width="100px"></div>
     <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px"width="100px"></div>
         <table align="center" border="1">
+        <table>
             <tr>
                 <th>校男排練球時間</th>
                 <th>校男排練球地點</th>
@@ -24,6 +25,8 @@
                 <td>星期一到星期五17:50-20:00</td>
                 <td>中原大學體育館</td>
             </tr>
+        </table>
+        <table>
             <tr>
                 <th>校女排練球時間</th>
                 <th>校女排練球地點</th>
@@ -40,6 +43,7 @@
                 <td>星期四17:50-20:00</td>
                 <td>中原大學體育館</td>
             </tr>
+      </table>
       </table>
       <div class="anime">
         <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/vo1.jpg?raw=true" width="720" height="480" alt="#"></a>
