--- a/v2.html
+++ b/v2.html
@@ -15,17 +15,7 @@
     <div class="pic1"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v2.png?raw=true" height="200px"></div>
     <div class="pic2"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px" width="100px"></div>
     <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px"width="100px"></div>
-        <table >
-            <tr>
-                <th>校男排練球時間</th>
-                <th>校男排練球地點</th>
-            </tr>
-            <tr>
-                <td>星期一到星期五17:50-20:00</td>
-                <td>中原大學體育館</td>
-            </tr>
-        </table>
-        <table>
+        <table align="center" border="1">
             <tr>
                 <th>校女排練球時間</th>
                 <th>校女排練球地點</th>
