--- a/ba2.html
+++ b/ba2.html
@@ -41,15 +41,18 @@
         <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad5.jpg?raw=true" width="720" height="480" alt="#"></a>
         <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad6.jpg?raw=true" width="720" height="480" alt="#"></a>
     </div>
-    
-     <div class="img">
+    <h1 class="white">
+        Man's:<a href="https://www.facebook.com/all.cycu.volleyball/">FB</a>&nbsp;&nbsp;&nbsp;
+        Woman's:<a href="https://www.facebook.com/Cygvt/">FB</a>
+    </h1>
+    <div class="img">
      <home>
             <div class="item">
-                <a href="index1.html">
+                <a href="https://hxy0603.github.io/hyx0603.github.io/index1.html">
                     <img src="img/HOME.png" height="70px" width="70px">
                 </a>
-            </div>  
      </home> 
+     </div>
 </div>
 </body>
 </html>
