--- a/ba2.html
+++ b/ba2.html
@@ -50,9 +50,9 @@
             <div class="item">
                 <a href="https://hxy0603.github.io/hyx0603.github.io/index1.html">
                     <img src="img/HOME.png" height="70px" width="70px">
-                </a>
+                </a></div>
      </home> 
      </div>
-</div>
+
 </body>
 </html>
