--- a/v2.html
+++ b/v2.html
@@ -17,11 +17,19 @@
     <div class="pic3"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/v1.png?raw=true" height="100px"width="100px"></div>
         <table align="center" border="1">
              <tr>
-                <th>校男排練球時間</th>
+                <th>校男排甲組練球時間</th>
                 <th>校男排練球地點</th>
             </tr>
             <tr>
-                <td>星期一到星期五17:50-20:00</td>
+                <td>星期一到星期五20:00-22:00</td>
+                <td>中原大學體育館</td>
+            </tr>
+            <tr>
+                <th>校男排乙組練球時間</th>
+                <th>校男排練球地點</th>
+            </tr>
+            <tr>
+                <td>星期二、星期五18:00-20:00</td>
                 <td>中原大學體育館</td>
             </tr>
             <tr>
