--- a/v2.html
+++ b/v2.html
@@ -37,15 +37,11 @@
                 <th>校女排練球地點</th>
             </tr>
             <tr>
-                <td>星期一17:50-20:00</td>
+                <td>星期一、星期四17:50-20:00</td>
                 <td>中原大學體育館</td>
             </tr>
             <tr>
                 <td>星期三17:50-22:00</td>
-                <td>中原大學體育館</td>
-            </tr>
-            <tr>
-                <td>星期四17:50-20:00</td>
                 <td>中原大學體育館</td>
             </tr>
       </table>
