--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>about01</title>
+    <title>關於我們</title>
     <style>
         @import"css/aboutus1.css"
 
