--- a/ba2.html
+++ b/ba2.html
@@ -42,7 +42,7 @@
         <a href="#"><img src="https://github.com/hxy0603/hyx0603.github.io/blob/main/img/bad6.jpg?raw=true" width="720" height="480" alt="#"></a>
     </div>
     <h1 class="white">
-       Man's＆Woman's::<a href="https://www.facebook.com/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%B8%E7%BE%BD%E7%90%83%E9%9A%8A-325130891201666/?ref=page_internal">FB</a>
+       Man's＆Woman's:<a href="https://www.facebook.com/%E4%B8%AD%E5%8E%9F%E5%A4%A7%E5%AD%B8%E7%BE%BD%E7%90%83%E9%9A%8A-325130891201666/?ref=page_internal">FB</a>
     </h1>
     <div class="img">
      <home>
