--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,7 @@
             
             系級:資管二甲<br><br>
             興趣:打羽球、打籃球、看電影<br><br>
-            心得:中原大學對於體育非常重視，我們選擇校隊這個主題去發想，
+            心得:我們選擇校隊這個主題去發想，
             做網頁途中雖然經歷過很多難關，但也從每次的難關中走出來，
             看到最後的網頁呈現在眼前時，真的很想痛哭流涕～<br><br><br>
             
