--- a/v1.html
+++ b/v1.html
@@ -78,7 +78,7 @@
  <div class="img">
      <home>
             <div class="item">
-                <a href="index1.html">
+                <a href="index.html">
                     <img src="img/HOME.png" height="70px" width="70px">
                 </a>
             </div>  
