--- a/v2.html
+++ b/v2.html
@@ -61,7 +61,7 @@
     <div class="img">
      <home>
             <div class="item">
-                <a href="https://hxy0603.github.io/hyx0603.github.io/index1.html">
+                <a href="index.html">
                     <img src="img/HOME.png" height="70px" width="70px">
                 </a></div>
      </home> 
